# project_10

./: README.md  pyproject.toml  requirements.txt  setup.cfg
api/: admin.py  filters.py  models.py  urls.py  views.py
api_yamdb/: settings.py  urls.py
api_yamdb/api/: permissions.py  serializers.py  urls.py  views.py
api_yamdb/api/migrations/: 0001_initial.py  0002_auto_20200804_2156.py
api_yamdb/api/v1/: serializers.py  urls.py  views.py
api_yamdb/api_yamdb/: settings.py
api_yamdb/reviews/: admin.py  models.py  validators.py
api_yamdb/reviews/migrations/: 0001_initial.py  0002_auto_20200804_2156.py  0003_auto_20220414_0916.py
api_yamdb/users/: models.py
api_yamdb/users/migrations/: 0001_initial.py
tests/: conftest.py
